--- a/apps/api/audit-ci.jsonc
+++ b/apps/api/audit-ci.jsonc
@@ -6,6 +6,18 @@
             "GHSA-3gc7-fjrx-p6mg|x402-express>@coinbase/cdp-sdk>@solana/spl-token>@solana/buffer-layout-utils>bigint-buffer": {
                 "active": true,
                 "notes": "Vulnerable code path is never called via the x402-express package."
+            },
+            "GHSA-33vc-wfww-vjfv|ai>jsondiffpatch": {
+                "active": true,
+                "notes": "We do not render any HTML coming out of jsondiffpatch."
+            },
+            "GHSA-qj3p-xc97-xw74|x402-express>x402>wagmi>@wagmi/connectors>@metamask/sdk": {
+                "active": true,
+                "notes": "We do not use the Metamask SDK in the browser."
+            },
+            "GHSA-qj3p-xc97-xw74|x402-express>x402>wagmi>@wagmi/connectors>@metamask/sdk>@metamask/sdk-communication-layer": {
+                "active": true,
+                "notes": "We do not use the Metamask SDK in the browser."
             }
         }
     ]
